--- a/src/Makefile
+++ b/src/Makefile
@@ -47,8 +47,10 @@ CXXFLAGS += -DCMDR_KEY_OPEN=SDLK_a		    # A
 CXXFLAGS += -DCMDR_KEY_PARENT=SDLK_b		# B
 CXXFLAGS += -DCMDR_KEY_OPERATION=SDLK_x		# X
 CXXFLAGS += -DCMDR_KEY_SYSTEM=SDLK_y		# Y
-CXXFLAGS += -DCMDR_KEY_PAGEUP=SDLK_h		# L1 / L2 = SDLK_j
-CXXFLAGS += -DCMDR_KEY_PAGEDOWN=SDLK_l		# R1 / R2 = SDLK_k
+CXXFLAGS += -DCMDR_KEY_PAGEUP=SDLK_h		# L1
+CXXFLAGS += -DCMDR_KEY_PAGEDOWN=SDLK_l		# R1
+CXXFLAGS += -DCMDR_KEY_HOME=SDLK_j		    # SDLK_j
+CXXFLAGS += -DCMDR_KEY_END=SDLK_k		    # SDLK_k
 CXXFLAGS += -DCMDR_KEY_SELECT=SDLK_n		# SELECT
 CXXFLAGS += -DCMDR_KEY_TRANSFER=SDLK_m		# START
 CXXFLAGS += -DCMDR_KEY_MENU=SDLK_u		    # MENU (added)
