Add screenshot functionality and quit program with key press
Signed-off-by: xiaoming <2014500726@smail.xtu.edu.cn>

--- a/src/Makefile
+++ b/src/Makefile
@@ -53,7 +53,9 @@ CXXFLAGS += -DCMDR_KEY_HOME=SDLK_j		    # SDLK_j
 CXXFLAGS += -DCMDR_KEY_END=SDLK_k		    # SDLK_k
 CXXFLAGS += -DCMDR_KEY_SELECT=SDLK_n		# SELECT
 CXXFLAGS += -DCMDR_KEY_TRANSFER=SDLK_m		# START
-CXXFLAGS += -DCMDR_KEY_MENU=SDLK_u		    # MENU (added)
+CXXFLAGS += -DCMDR_KEY_MENU=SDLK_u		    # MENU
+CXXFLAGS += -DCMDR_KEY_SHOT=SDLK_t		    # SCREENSHOT
+CXXFLAGS += -DCMDR_KEY_QUIT=SDLK_r	    	# QUIT
 CXXFLAGS += -DOSK_KEY_SYSTEM_IS_BACKSPACE=ON
 CXXFLAGS += -DSCREEN_WIDTH=640
 CXXFLAGS += -DSCREEN_HEIGHT=480
