--- a/src/Makefile
+++ b/src/Makefile
@@ -49,13 +49,13 @@ CXXFLAGS += -DCMDR_KEY_OPERATION=SDLK_x		# X
 CXXFLAGS += -DCMDR_KEY_SYSTEM=SDLK_y		# Y
 CXXFLAGS += -DCMDR_KEY_PAGEUP=SDLK_h		# L1
 CXXFLAGS += -DCMDR_KEY_PAGEDOWN=SDLK_l		# R1
-CXXFLAGS += -DCMDR_KEY_HOME=SDLK_j		    # SDLK_j
-CXXFLAGS += -DCMDR_KEY_END=SDLK_k		    # SDLK_k
+CXXFLAGS += -DCMDR_KEY_HOME=SDLK_j		    # L2
+CXXFLAGS += -DCMDR_KEY_END=SDLK_k		    # R2
 CXXFLAGS += -DCMDR_KEY_SELECT=SDLK_n		# SELECT
 CXXFLAGS += -DCMDR_KEY_TRANSFER=SDLK_m		# START
 CXXFLAGS += -DCMDR_KEY_MENU=SDLK_u		    # MENU
-CXXFLAGS += -DCMDR_KEY_SHOT=SDLK_t		    # SCREENSHOT
-CXXFLAGS += -DCMDR_KEY_QUIT=SDLK_r	    	# QUIT
+CXXFLAGS += -DCMDR_KEY_SHOT=SDLK_t		    # vol-
+CXXFLAGS += -DCMDR_KEY_QUIT=SDLK_r	    	# vol+
 CXXFLAGS += -DOSK_KEY_SYSTEM_IS_BACKSPACE=ON
 CXXFLAGS += -DSCREEN_WIDTH=640
 CXXFLAGS += -DSCREEN_HEIGHT=480
